# rexeb

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/cli/: commands.rs  mod.rs
src/converter/: builder.rs  install_script.rs  mod.rs
src/models/: arch.rs  dependency.rs  mod.rs  package.rs
src/parsers/: deb.rs  mod.rs
src/resolver/: aur.rs  database.rs  fuzzy.rs  mapper.rs  mod.rs
src/sandbox/: mod.rs  nspawn.rs
src/tui/: mod.rs
